I was able to get them into 3 rows of 2. I think the spacing is getting disturbed because the images may be different sizes so the two rows of 3 look very strange however this should be an easy fix

--- a/src/components/ProjectContainer/style.css
+++ b/src/components/ProjectContainer/style.css
@@ -36,6 +36,7 @@
     padding: 10px!important;
     margin-top: 5%!important;
     margin-bottom: 5%!important;
+    text-align: center;
 }
 .pads{
     margin-top: 5px!important;
